# brew-up

./: LICENSE  README.md  brew.sh  brew_scanner.py  brew_scanner_simple.py  cleanup_today_installs.sh  install_brew_apps.sh  install_brew_apps_minimal.sh  pyproject.toml  test_tools.sh
src/brew_manager/: __init__.py
src/brew_manager/cli/: __init__.py  main.py
src/brew_manager/core/: __init__.py  config.py  scanner.py  template_generator.py
src/brew_manager/templates/: vm_install_script.j2
venv-brew-scanner/: pyvenv.cfg
